[tool.poetry]
name = "lighthouse-alert-bot"
version = "0.1.0"
description = ""
authors = ["THECODEDEMOGORGON <matnik2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
aiogram = "2.5"
python-telegram-bot = "^21.5"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
